--- a/src/App.css
+++ b/src/App.css
@@ -52,9 +52,8 @@
 	height: 40px;
 }
 .navbar-header {
-	/* background-color: #2f6b1a !important; */
 	background-color: #000;
-	padding: 0px;
+	padding: 0px !important;
 }
 .nav-link {
 	color: #fff !important;
@@ -67,7 +66,16 @@
 	font-size: 16px;
 }
 .contact-heading {
-	border: 1px solid #fff;
-	padding: 9px;
-	height: 41px;
+	border: 1px solid #fff !important;
+	padding: 7px !important;
+	height: 41px !important;
+}
+.footer-container {
+	background: #000;
+}
+.footer-content {
+	color: #fff;
+}
+.footer-content span {
+	margin-left: 20px;
 }
