--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -197,7 +197,7 @@ a:hover {
 /*--------------------------Header Start---------------------------------------  */
 
 .header .navbar {
-	background-color: #000;
+	background-color: #f7ecec;
 }
 
 .header .navbar-brand {
@@ -232,17 +232,19 @@ a:hover {
 
 .main-image-container {
 	position: relative;
+	height: 100vh;
 }
 
 .main-image {
 	width: 100%;
-	height: auto;
+	height: 60%;
+	object-fit: cover;
 }
 
 .main-text-container {
 	position: absolute;
-	top: 50%;
-	left: 50%;
+	top: 40%;
+	left: 20%;
 	transform: translate(-50%, -50%);
 	text-align: center;
 }
