--- a/src/styles/components/footer/footer.module.css
+++ b/src/styles/components/footer/footer.module.css
@@ -1,31 +1,35 @@
 /* Footer.module.css */
+
 .footerContainer {
-    background-color: #519258; /* Adjust the color to match your design */
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-  }
-  
-  .contactInfo {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
-  .map {
-    width: 100%; /* Adjust as necessary */
-    height: auto; /* Adjust as necessary */
-  }
-  
-  .socialIcons {
-    display: flex;
-    align-items: center;
-  }
-  
-  .icon {
-    margin-right: 10px; /* Space between icons */
-  }
-  
-  /* Additional styling as needed */
-  
+	background-color: #519258; /* Adjust the color to match your design */
+	color: white;
+	display: flex;
+	justify-content: space-between;
+	padding: 20px;
+	width: 100%;
+	margin-top: auto;
+	flex-direction: column;
+	min-height: calc(100vh - 120px);
+}
+
+.contactInfo {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.map {
+	width: 100%; /* Adjust as necessary */
+	height: auto; /* Adjust as necessary */
+}
+
+.socialIcons {
+	display: flex;
+	align-items: center;
+}
+
+.icon {
+	margin-right: 10px; /* Space between icons */
+}
+
+/* Additional styling as needed */
