--- a/src/styles/components/footer/footer.module.css
+++ b/src/styles/components/footer/footer.module.css
@@ -1,101 +1,22 @@
 .footer {
-	background-color: #4CAF50;
+	background-color: #4caf50;
 	padding: 70px 0;
-  }
-  .container{
+}
+.container {
 	display: flex;
 	justify-content: space-around;
-  }
-  
-  .footerColTitle {
-	font-size: 18px;
-	color: #ffffff;
-	text-transform: capitalize;
-	margin-bottom: 35px;
-	font-weight: 500;
-	position: relative;
-  }
-  
-  .footerColTitle::before {
-	content: '';
-	position: absolute;
-	left: 0;
-	bottom: -10px;
-	background-color: #e91e63;
-	height: 2px;
-	box-sizing: border-box;
-	width: 50px;
-  }
-  
-  .footerColList {
-	list-style: none;
-  }
-  
-  .footerColList li:not(:last-child) {
-	margin-bottom: 10px;
-  }
-  
-  .footerColList li a {
-	font-size: 16px;
-	text-transform: capitalize;
-	text-decoration: none;
-	font-weight: 300;
-	color: #bbbbbb;
-	display: block;
-	transition: all 0.3s ease;
-  }
-  
-  .footerColList li a:hover {
-	color: #ffffff;
-	padding-left: 8px;
-  }
-  
-  .socialLinks {
-	display: flex;
-	align-items: center;
-  }
-  
-  .socialLinks a {
-	display: inline-block;
-	height: 40px;
-	width: 40px;
-	background-color: rgba(255,255,255,0.2);
-	margin: 0 10px 10px 0;
-	text-align: center;
-	line-height: 40px;
-	border-radius: 50%;
-	color: #ffffff;
-	transition: all 0.5s ease;
-  }
-  
-  .socialLinks a:hover {
-	color: #24262b;
-	background-color: #ffffff;
-  }
-  
-  @media (max-width: 767px) {
-	.footerCol {
-	  width: 50%;
-	  margin-bottom: 30px;
-	}
-  }
-  
-  @media (max-width: 574px) {
-	.footerCol {
-	  width: 100%;
-	}
-  }
+}
 
-  .footerColTitle {
+.footerColTitle {
 	font-size: 18px;
 	color: #ffffff;
 	text-transform: capitalize;
 	margin-bottom: 35px;
 	font-weight: 500;
 	position: relative;
-  }
-  
-  .footerColTitle::before {
+}
+
+.footerColTitle::before {
 	content: '';
 	position: absolute;
 	left: 0;
@@ -104,17 +25,17 @@
 	height: 2px;
 	box-sizing: border-box;
 	width: 50px;
-  }
-  
-  .footerColList {
+}
+
+.footerColList {
 	list-style: none;
-  }
-  
-  .footerColList li:not(:last-child) {
+}
+
+.footerColList li:not(:last-child) {
 	margin-bottom: 10px;
-  }
-  
-  .footerColList li a {
+}
+
+.footerColList li a {
 	font-size: 16px;
 	text-transform: capitalize;
 	text-decoration: none;
@@ -122,46 +43,124 @@
 	color: #bbbbbb;
 	display: block;
 	transition: all 0.3s ease;
-  }
-  
-  .footerColList li a:hover {
+}
+
+.footerColList li a:hover {
 	color: #ffffff;
 	padding-left: 8px;
-  }
-  
-  .socialLinks {
+}
+
+.socialLinks {
 	display: flex;
 	align-items: center;
-  }
-  
-  .socialLinks a {
+}
+
+.socialLinks a {
 	display: inline-block;
 	height: 40px;
 	width: 40px;
-	background-color: rgba(255,255,255,0.2);
+	background-color: rgba(255, 255, 255, 0.2);
 	margin: 0 10px 10px 0;
 	text-align: center;
 	line-height: 40px;
 	border-radius: 50%;
 	color: #ffffff;
 	transition: all 0.5s ease;
-  }
-  
-  .socialLinks a:hover {
+}
+
+.socialLinks a:hover {
 	color: #24262b;
 	background-color: #ffffff;
-  }
-  
-  @media (max-width: 767px) {
+}
+
+@media (max-width: 767px) {
 	.footerCol {
-	  width: 50%;
-	  margin-bottom: 30px;
+		width: 50%;
+		margin-bottom: 30px;
 	}
-  }
-  
-  @media (max-width: 574px) {
+}
+
+@media (max-width: 574px) {
 	.footerCol {
-	  width: 100%;
+		width: 100%;
 	}
-  }
-	
+}
+
+.footerColTitle {
+	font-size: 18px;
+	color: #ffffff;
+	text-transform: capitalize;
+	margin-bottom: 35px;
+	font-weight: 500;
+	position: relative;
+}
+
+.footerColTitle::before {
+	content: '';
+	position: absolute;
+	left: 0;
+	bottom: -10px;
+	background-color: #e91e63;
+	height: 2px;
+	box-sizing: border-box;
+	width: 50px;
+}
+
+.footerColList {
+	list-style: none;
+}
+
+.footerColList li:not(:last-child) {
+	margin-bottom: 10px;
+}
+
+.footerColList li a {
+	font-size: 16px;
+	text-transform: capitalize;
+	text-decoration: none;
+	font-weight: 300;
+	color: #bbbbbb;
+	display: block;
+	transition: all 0.3s ease;
+}
+
+.footerColList li a:hover {
+	color: #ffffff;
+	padding-left: 8px;
+}
+
+.socialLinks {
+	display: flex;
+	align-items: center;
+}
+
+.socialLinks a {
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	background-color: rgba(255, 255, 255, 0.2);
+	margin: 0 10px 10px 0;
+	text-align: center;
+	line-height: 40px;
+	border-radius: 50%;
+	color: #ffffff;
+	transition: all 0.5s ease;
+}
+
+.socialLinks a:hover {
+	color: #24262b;
+	background-color: #ffffff;
+}
+
+@media (max-width: 767px) {
+	.footerCol {
+		width: 50%;
+		margin-bottom: 30px;
+	}
+}
+
+@media (max-width: 574px) {
+	.footerCol {
+		width: 100%;
+	}
+}
