--- a/src/styles/components/header/header.module.css
+++ b/src/styles/components/header/header.module.css
@@ -3,6 +3,7 @@
 .navbarCustom {
 	background-color: #d9fbfb;
 	width: 100%;
+  height: 6rem;
 	margin-left: auto;
 	margin-right: auto;
 	display: flex;
@@ -13,9 +14,10 @@
 	display: flex;
 	align-items: center;
 	padding: 0.5rem 1rem;
-	margin-right: 1rem;
-	width: 20%;
-	border-right: 1px solid #333;
+	/* width: 0%; */
+  font-size: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 700;
 }
 .navbarBrand img {
 	max-height: 40px;
@@ -25,29 +27,30 @@
 .navLinkCustom {
 	color: #333;
 	margin-right: 1rem;
-	font-weight: 500;
+	font-weight: 600;
 	text-transform: uppercase;
+  transition: color 0.3s ease-in-out;
+  text-decoration: none;
 }
 
 .container {
 	display: flex;
 	align-items: center;
+  width: 60%;
 	justify-content: space-between;
 	padding-left: 15px;
 	padding-right: 15px;
-	border: 1px solid red;
 }
 
 .getStarted {
 	background-color: #4caf50;
 	color: #fff;
-	border-radius: 5px;
-	padding: 0.5rem 1rem;
+	padding: 1rem 1rem;
 	transition: background-color 0.3s ease-in-out;
 }
 
 .getStarted:hover {
-	background-color: #3e8e41;
+	background-color: #FACC06;
 }
 
 @media (max-width: 991px) {
