--- a/src/styles/components/header/header.module.css
+++ b/src/styles/components/header/header.module.css
@@ -20,8 +20,9 @@
   font-weight: 700;
 }
 .navbarBrand img {
-	max-height: 40px;
+	max-height: 240px;
 	margin-right: 10px;
+	color:black;
 }
 
 .navLinkCustom {
