--- a/src/styles/components/header/header.module.css
+++ b/src/styles/components/header/header.module.css
@@ -2,8 +2,8 @@
 
 .navbarCustom {
 	background-color: #d9fbfb;
-	width: 100%;
-  height: 6rem;
+	width: 100% !important;
+	height: 6rem;
 	margin-left: auto;
 	margin-right: auto;
 	display: flex;
@@ -15,29 +15,29 @@
 	align-items: center;
 	padding: 0.5rem 1rem;
 	/* width: 0%; */
-  font-size: 20px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-weight: 700;
+	font-size: 14px;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-weight: 700;
 }
 .navbarBrand img {
 	max-height: 240px;
 	margin-right: 10px;
-	color:black;
+	color: black;
 }
 
 .navLinkCustom {
 	color: #333;
 	margin-right: 1rem;
-	font-weight: 600;
+	font-weight: 500;
 	text-transform: uppercase;
-  transition: color 0.3s ease-in-out;
-  text-decoration: none;
+	transition: color 0.3s ease-in-out;
+	text-decoration: none;
 }
 
 .container {
 	display: flex;
 	align-items: center;
-  width: 60%;
+	width: 100%;
 	justify-content: space-between;
 	padding-left: 15px;
 	padding-right: 15px;
@@ -51,7 +51,7 @@
 }
 
 .getStarted:hover {
-	background-color: #FACC06;
+	background-color: #facc06;
 }
 
 @media (max-width: 991px) {
@@ -73,4 +73,7 @@
 }
 .navbar-light {
 	height: 79px !important;
+}
+.navLink {
+	font-size: 14px;
 }
