--- a/src/styles/components/heroPage/heroPage.module.css
+++ b/src/styles/components/heroPage/heroPage.module.css
@@ -29,6 +29,7 @@
 	padding: 0;
 	display: flex;
 	width: 50%;
+	height: 42vh;
 	align-items: center;
 	justify-content: center;
 }
@@ -51,9 +52,12 @@
 	font-family: Arial, sans-serif;
 }
 
+.contentPart {
+	padding: 17px;
+	font-size: 14px;
+}
 .heading3 {
 	font-size: 1.5em;
 	line-height: 1.4;
 	font-family: Georgia, serif;
 }
-
